<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="285dp"
        android:text="@string/tv_register"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_fullname"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/et_fullname_hint"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <EditText
        android:id="@+id/et_emailRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/et_emailRegister_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fullname" />

    <EditText
        android:id="@+id/et_passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/et_passwordRegister_hint"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_emailRegister" />

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/et_confirmPassword_hint"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordRegister" />

    <Button
        android:id="@+id/bt_register"
        android:backgroundTint="@color/theme"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bt_register"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmPassword" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="13dp"
        android:text="@string/tv4"
        app:layout_constraintEnd_toStartOf="@+id/tv_TC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_register" />

    <TextView
        android:id="@+id/tv_TC"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="53dp"
        android:clickable="true"
        android:text="@string/tv_TC"
        android:textColor="#0000FF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv4"
        app:layout_constraintTop_toBottomOf="@+id/bt_register" />
</androidx.constraintlayout.widget.ConstraintLayout>