<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_graduate"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/graduates" />

    <EditText
        android:id="@+id/et_emailLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/et_emailLogin"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_graduate" />

    <EditText
        android:id="@+id/et_passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/et_passwordLogin"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_emailLogin"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="233dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/tv_forgotPassword"
        android:textColor="#0000FF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordLogin" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bt_login"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotPassword" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="1dp"
        android:text="@string/tv1"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_registerNow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    <TextView
        android:id="@+id/tv_registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="95dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/tv_registerNow"
        android:textColor="#0000FF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />
</androidx.constraintlayout.widget.ConstraintLayout>